--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "body-parser": "^1.20.2",
